--- a/src/HomeDev.WebApi.Sqlite.DataAccess/HomeDev.WebApi.Sqlite.DataAccess.csproj
+++ b/src/HomeDev.WebApi.Sqlite.DataAccess/HomeDev.WebApi.Sqlite.DataAccess.csproj
@@ -7,7 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.NetTopologySuite" Version="5.0.10" />
-    <PackageReference Include="SQLitePCLRaw.lib.e_sqlite3" Version="2.0.6" />
+    <PackageReference Include="SQLitePCLRaw.bundle_sqlite3" Version="2.0.6" />
   </ItemGroup>
 
   <ItemGroup>
