Working on all platforms, linux, windows, docker

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,10 +1,12 @@
-FROM public.ecr.aws/lambda/dotnet:5.0 AS base 
+#FROM public.ecr.aws/lambda/dotnet:5.0 AS base 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 as build 
 
 WORKDIR /src 
 ENV ASPNETCORE_ENVIRONMENT=Development 
 
-RUN apt-get update && apt-get install -y sqlite3 libsqlite3-mod-spatialite 
+RUN apt-get update \
+    && apt-get install -y libsqlite3-mod-spatialite \
+    && apt-get install -y libspatialite-dev
 
 COPY . . 
 RUN dotnet restore 
@@ -20,10 +22,10 @@ RUN dotnet publish "HomeDev.WebApi.Sqlite.csproj" \
             --output /app/publish \ 
             -p:PublishReadyToRun=true   
 
-FROM base AS final 
+FROM build AS final 
 WORKDIR /var/task 
 COPY --from=publish /app/publish . 
 ENTRYPOINT ["dotnet", "HomeDev.WebApi.Sqlite.dll"]
 
 # docker build -t img-homedev-webapi-sqlite .
-# docker run --name homedev-webapi-sqlite -dp 5000:80 img-homedev-webapi-sqlite
+# docker run --name homedev-webapi-sqlite -dp 8080:80 -e ASPNETCORE_URLS=http://+:8080 img-homedev-webapi-sqlite
