--- a/src/HomeDev.WebApi.Sqlite.DataAccess/HomeDev.WebApi.Sqlite.DataAccess.csproj
+++ b/src/HomeDev.WebApi.Sqlite.DataAccess/HomeDev.WebApi.Sqlite.DataAccess.csproj
@@ -2,12 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <!-- https://blog.magnusmontin.net/2018/11/05/platform-conditional-compilation-in-net-core/ -->
+    <IsLinux Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))' == 'true'">true</IsLinux>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.NetTopologySuite" Version="5.0.10" />
-    <PackageReference Include="SQLitePCLRaw.bundle_sqlite3" Version="2.0.6" />
+    <PackageReference Include="SQLitePCLRaw.bundle_sqlite3" Version="2.0.6" Condition="'$(IsLinux)'=='true'" />
   </ItemGroup>
 
   <ItemGroup>
